// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchbook 1`] = `0`;

exports[`fetchbook 2`] = `""`;

exports[`fetchbook 3`] = `
"Usage: fetchbook [options] [command]

Manage your HTTP requests

Options:
  -V, --version             output the version number
  -h, --help                display help for command

Commands:
  init [name]               initialize a fetchbook project
  run [options] [story]     run your stories
  export [options] [story]  export your stories to existing formats
  help [command]            display help for command"
`;

exports[`fetchbook --help 1`] = `0`;

exports[`fetchbook --help 2`] = `
"Usage: fetchbook [options] [command]

Manage your HTTP requests

Options:
  -V, --version             output the version number
  -h, --help                display help for command

Commands:
  init [name]               initialize a fetchbook project
  run [options] [story]     run your stories
  export [options] [story]  export your stories to existing formats
  help [command]            display help for command"
`;

exports[`fetchbook --help 3`] = `""`;

exports[`fetchbook --version 1`] = `0`;

exports[`fetchbook --version 2`] = `"2.1.1"`;

exports[`fetchbook --version 3`] = `""`;

exports[`fetchbook run --all 1`] = `0`;

exports[`fetchbook run --all 2`] = `
"❯ Examples / Pokeapi
❯ GET Blastoise ...
✔ GET Blastoise 200
❯ GET Charizard ...
✔ GET Charizard 200
❯ GET Venusaur ...
✔ GET Venusaur 200
✔ Examples / Pokeapi
❯ Examples / Zelda Fan Api
❯ GET A Link to the Past ...
✔ GET A Link to the Past 200
❯ GET Ocarina of Time ...
✔ GET Ocarina of Time 200
✔ Examples / Zelda Fan Api
❯ Test / Fail
❯ GET Get all posts ...
[?25h"
`;

exports[`fetchbook run --all 3`] = `
"✖ GET Get all posts ... [FAILED: GET Get all posts ...]
✖ Test / Fail [FAILED: Test / Fail]
error: expect(received).toMatchObject(expected)

- Expected  - 1
+ Received  + 1

  Object {
    "headers": Object {
      "content-type": "application/json; charset=utf-8",
    },
-   "status": 201,
+   "status": 200,
  }"
`;

exports[`fetchbook run test/pass --all 1`] = `0`;

exports[`fetchbook run test/pass --all 2`] = `
"❯ Test / Pass
❯ POST Add a post ...
✔ POST Add a post 201
❯ GET Add and get several posts ...
❯ Before
❯ POST Add a post ...
✔ POST Add a post 201
❯ POST Add a post ...
✔ POST Add a post 201
❯ POST Add a post ...
✔ POST Add a post 201
✔ Before
✔ GET Add and get several posts 200
❯ GET Get a missing post ...
✔ GET Get a missing post 404
❯ GET Get a post ...
✔ GET Get a post 200
❯ GET Get all posts ...
✔ GET Get all posts 200
✔ Test / Pass
[?25h"
`;

exports[`fetchbook run test/pass --all 3`] = `""`;

exports[`fetchbook run test/pass --all -v 1`] = `0`;

exports[`fetchbook run test/pass --all -v 2`] = `
"{
  "request": {
    "url": "http://localhost:3000/posts",
    "method": "POST",
    "headers": {
      "Content-Type": "application/json"
    },
    "body": {
      "it": "works!"
    }
  },
  "response": {
    "status": 201,
    "headers": {
      "vary": "Origin, X-HTTP-Method-Override, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "access-control-expose-headers": "Location",
      "location": "http://localhost:3000/posts/2",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "31",
      "x-powered-by": "Express"
    },
    "body": {
      "it": "works!",
      "id": 2
    }
  }
}
{
  "request": {
    "url": "http://localhost:3000/posts",
    "method": "POST",
    "headers": {
      "Content-Type": "application/json"
    },
    "body": {
      "it": "works!"
    }
  },
  "response": {
    "status": 201,
    "headers": {
      "vary": "Origin, X-HTTP-Method-Override, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "access-control-expose-headers": "Location",
      "location": "http://localhost:3000/posts/2",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "31",
      "x-powered-by": "Express"
    },
    "body": {
      "it": "works!",
      "id": 2
    }
  }
}
{
  "request": {
    "url": "http://localhost:3000/posts",
    "method": "POST",
    "headers": {
      "Content-Type": "application/json"
    },
    "body": {
      "it": "works!"
    }
  },
  "response": {
    "status": 201,
    "headers": {
      "vary": "Origin, X-HTTP-Method-Override, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "access-control-expose-headers": "Location",
      "location": "http://localhost:3000/posts/3",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "31",
      "x-powered-by": "Express"
    },
    "body": {
      "it": "works!",
      "id": 3
    }
  }
}
{
  "request": {
    "url": "http://localhost:3000/posts",
    "method": "POST",
    "headers": {
      "Content-Type": "application/json"
    },
    "body": {
      "it": "works!"
    }
  },
  "response": {
    "status": 201,
    "headers": {
      "vary": "Origin, X-HTTP-Method-Override, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "access-control-expose-headers": "Location",
      "location": "http://localhost:3000/posts/4",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "31",
      "x-powered-by": "Express"
    },
    "body": {
      "it": "works!",
      "id": 4
    }
  }
}
{
  "request": {
    "url": "http://localhost:3000/posts",
    "method": "GET"
  },
  "response": {
    "status": 200,
    "headers": {
      "vary": "Origin, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "166",
      "x-powered-by": "Express"
    },
    "body": [
      {
        "id": 1,
        "it": "works!"
      },
      {
        "it": "works!",
        "id": 2
      },
      {
        "it": "works!",
        "id": 3
      },
      {
        "it": "works!",
        "id": 4
      }
    ]
  }
}
{
  "request": {
    "url": "http://localhost:3000/posts/0",
    "method": "GET"
  },
  "response": {
    "status": 404,
    "headers": {
      "vary": "Origin, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "2",
      "x-powered-by": "Express"
    },
    "body": {}
  }
}
{
  "request": {
    "url": "http://localhost:3000/posts/1",
    "method": "GET",
    "headers": {
      "Some-Header": "value"
    }
  },
  "response": {
    "status": 200,
    "headers": {
      "vary": "Origin, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "31",
      "x-powered-by": "Express"
    },
    "body": {
      "id": 1,
      "it": "works!"
    }
  }
}
{
  "request": {
    "url": "http://localhost:3000/posts",
    "method": "GET",
    "headers": {
      "Some-Header": "value"
    }
  },
  "response": {
    "status": 200,
    "headers": {
      "vary": "Origin, Accept-Encoding",
      "access-control-allow-credentials": "true",
      "cache-control": "no-cache",
      "pragma": "no-cache",
      "expires": "-1",
      "x-content-type-options": "nosniff",
      "content-type": "application/json; charset=utf-8",
      "content-length": "43",
      "x-powered-by": "Express"
    },
    "body": [
      {
        "id": 1,
        "it": "works!"
      }
    ]
  }
}
[?25h"
`;

exports[`fetchbook run test/pass --all -v 3`] = `""`;

exports[`fetchbook run test/fail --all 1`] = `0`;

exports[`fetchbook run test/fail --all 2`] = `
"❯ Test / Fail
❯ GET Get all posts ...
[?25h"
`;

exports[`fetchbook run test/fail --all 3`] = `
"✖ GET Get all posts ... [FAILED: GET Get all posts ...]
✖ Test / Fail [FAILED: Test / Fail]
error: expect(received).toMatchObject(expected)

- Expected  - 1
+ Received  + 1

  Object {
    "headers": Object {
      "content-type": "application/json; charset=utf-8",
    },
-   "status": 201,
+   "status": 200,
  }"
`;

exports[`fetchbook run test --all 1`] = `0`;

exports[`fetchbook run test --all 2`] = `
"❯ Test / Fail
❯ GET Get all posts ...
[?25h"
`;

exports[`fetchbook run test --all 3`] = `
"✖ GET Get all posts ... [FAILED: GET Get all posts ...]
✖ Test / Fail [FAILED: Test / Fail]
error: expect(received).toMatchObject(expected)

- Expected  - 1
+ Received  + 1

  Object {
    "headers": Object {
      "content-type": "application/json; charset=utf-8",
    },
-   "status": 201,
+   "status": 200,
  }"
`;

exports[`fetchbook run examples --all 1`] = `0`;

exports[`fetchbook run examples --all 2`] = `
"❯ Examples / Pokeapi
❯ GET Blastoise ...
✔ GET Blastoise 200
❯ GET Charizard ...
✔ GET Charizard 200
❯ GET Venusaur ...
✔ GET Venusaur 200
✔ Examples / Pokeapi
❯ Examples / Zelda Fan Api
❯ GET A Link to the Past ...
✔ GET A Link to the Past 200
❯ GET Ocarina of Time ...
✔ GET Ocarina of Time 200
✔ Examples / Zelda Fan Api
[?25h"
`;

exports[`fetchbook run examples --all 3`] = `""`;

exports[`fetchbook run test/pass/add-post.fetch.ts 1`] = `0`;

exports[`fetchbook run test/pass/add-post.fetch.ts 2`] = `
"❯ Test / Pass
❯ POST Add a post ...
✔ POST Add a post 201
✔ Test / Pass
[?25h"
`;

exports[`fetchbook run test/pass/add-post.fetch.ts 3`] = `""`;

exports[`fetchbook run test/fail/get-posts.fetch.ts 1`] = `0`;

exports[`fetchbook run test/fail/get-posts.fetch.ts 2`] = `
"❯ Test / Fail
❯ GET Get all posts ...
[?25h"
`;

exports[`fetchbook run test/fail/get-posts.fetch.ts 3`] = `
"✖ GET Get all posts ... [FAILED: GET Get all posts ...]
✖ Test / Fail [FAILED: Test / Fail]
error: expect(received).toMatchObject(expected)

- Expected  - 1
+ Received  + 1

  Object {
    "headers": Object {
      "content-type": "application/json; charset=utf-8",
    },
-   "status": 201,
+   "status": 200,
  }"
`;

exports[`fetchbook export --all 1`] = `0`;

exports[`fetchbook export --all 2`] = `
"curl 'https://zelda.fanapis.com/api/games/5f6ce9d805615a85623ec2b8' -X GET
curl 'http://localhost:3000/posts' -X POST -H "content-type: application/json" --data-binary '{"it":"works!"}'
curl 'http://localhost:3000/posts' -X POST -H "content-type: application/json" --data-binary '{"it":"works!"}'
curl 'http://localhost:3000/posts' -X POST -H "content-type: application/json" --data-binary '{"it":"works!"}'
curl 'http://localhost:3000/posts' -X POST -H "content-type: application/json" --data-binary '{"it":"works!"}'
curl 'http://localhost:3000/posts' -X GET
curl 'https://pokeapi.co/api/v2/pokemon/blastoise' -X GET
curl 'https://pokeapi.co/api/v2/pokemon/charizard' -X GET
curl 'http://localhost:3000/posts/0' -X GET
curl 'http://localhost:3000/posts/1' -X GET -H "some-header: value"
curl 'http://localhost:3000/posts' -X GET -H "some-header: value"
curl 'http://localhost:3000/posts' -X GET -H "some-header: value"
curl 'https://zelda.fanapis.com/api/games/5f6ce9d805615a85623ec2ba' -X GET
curl 'https://pokeapi.co/api/v2/pokemon/venusaur' -X GET"
`;

exports[`fetchbook export --all 3`] = `""`;

exports[`fetchbook export test/pass/add-post.fetch.ts 1`] = `0`;

exports[`fetchbook export test/pass/add-post.fetch.ts 2`] = `"curl 'http://localhost:3000/posts' -X POST -H "content-type: application/json" --data-binary '{"it":"works!"}'"`;

exports[`fetchbook export test/pass/add-post.fetch.ts 3`] = `""`;
